Removed (spurious, touch-initiated) tooltips from nav buttons

Windows generates WM_MOUSEMOVE buttons at random points (to make sure
that apps know where the cursor is). In some cases the cursor location
was caused by a touch event - the mouse cursor jumps to the last touch
location.

This patch tracks the last touch location so that tooltips can ignore
those extraneous mousemove's.

BUG=698435

Review-Url: https://codereview.chromium.org/2829653002
Cr-Commit-Position: refs/heads/master@{#466046}

Former-commit-id: a19d2ff185b04105bf66c835f8bb84b8b5fb79b2