ui/views/corewm/tooltip_controller.cc
@@ -181,6 +181,14 @@ void TooltipController::OnKeyEvent(ui::KeyEvent* event) {
 }
 
 void TooltipController::OnMouseEvent(ui::MouseEvent* event) {
+  // Ignore mouse events that coincide with the last touch event.
+  if (event->location() == last_touch_loc_) {
+    SetTooltipWindow(nullptr);
+
+    if (tooltip_->IsVisible())
+      UpdateIfRequired();
+    return;
+  }
   switch (event->type()) {
     case ui::ET_MOUSE_CAPTURE_CHANGED:
     case ui::ET_MOUSE_EXITED:
@@ -224,11 +232,10 @@ void TooltipController::OnMouseEvent(ui::MouseEvent* event) {
 }
 
 void TooltipController::OnTouchEvent(ui::TouchEvent* event) {
-  // TODO(varunjain): need to properly implement tooltips for
-  // touch events.
   // Hide the tooltip for touch events.
   tooltip_->Hide();
   SetTooltipWindow(NULL);
+  last_touch_loc_ = event->location();
 }
 
 void TooltipController::OnCancelMode(ui::CancelModeEvent* event) {
