ui/views/corewm/tooltip_controller_unittest.cc
@@ -225,6 +225,32 @@ TEST_F(TooltipControllerTest, HideEmptyTooltip) {
   EXPECT_FALSE(helper_->IsTooltipVisible());
 }
 
+TEST_F(TooltipControllerTest, DontShowTooltipOnTouch) {
+  // TODO: these tests use GetContext(). That should go away for aura-mus
+  // client. http://crbug.com/663781.
+  if (IsMus())
+    return;
+
+  view_->set_tooltip_text(ASCIIToUTF16("Tooltip Text"));
+  EXPECT_EQ(base::string16(), helper_->GetTooltipText());
+  EXPECT_EQ(nullptr, helper_->GetTooltipWindow());
+
+  generator_->PressMoveAndReleaseTouchToCenterOf(GetWindow());
+  EXPECT_EQ(base::string16(), helper_->GetTooltipText());
+  EXPECT_EQ(nullptr, helper_->GetTooltipWindow());
+
+  generator_->MoveMouseToCenterOf(GetWindow());
+  EXPECT_EQ(base::string16(), helper_->GetTooltipText());
+  EXPECT_EQ(nullptr, helper_->GetTooltipWindow());
+
+  generator_->MoveMouseBy(1, 0);
+  EXPECT_TRUE(helper_->IsTooltipVisible());
+  base::string16 expected_tooltip = ASCIIToUTF16("Tooltip Text");
+  EXPECT_EQ(expected_tooltip, aura::client::GetTooltipText(GetWindow()));
+  EXPECT_EQ(expected_tooltip, helper_->GetTooltipText());
+  EXPECT_EQ(GetWindow(), helper_->GetTooltipWindow());
+}
+
 #if defined(OS_CHROMEOS)
 // crbug.com/664370.
 TEST_F(TooltipControllerTest, MaxWidth) {
